# Online_training

./: README.md  Readme.md  pyproject.toml  requirements.txt  tests2.txt
config/: settings.py  urls.py
education/: models.py  serializers.py  tests.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_course_author_lesson_author.py  0003_subscription.py  0004_alter_subscription_options.py  0005_lesson_date_create.py
payment/: models.py  serializers.py  services.py  urls.py  views.py
payment/migrations/: 0003_payment_stripe_id_alter_payment_amount_payment_and_more.py  0004_alter_payment_date_of_payment.py
users/: views.py
users/management/commands/: csu.py
users/migrations/: 0007_alter_user_ver_code.py  0008_alter_user_ver_code.py  0009_alter_user_ver_code.py  0010_alter_user_ver_code.py  0011_alter_user_ver_code.py  0012_alter_user_ver_code.py  0013_alter_user_ver_code.py  0014_alter_user_ver_code.py  0015_alter_user_ver_code.py  0016_alter_user_ver_code.py  0017_alter_user_ver_code.py  0018_alter_user_ver_code.py  0019_alter_user_ver_code.py  0020_alter_user_ver_code.py  0021_alter_user_ver_code.py  0022_alter_user_ver_code.py  0023_alter_user_ver_code.py  0024_alter_user_ver_code.py  0025_alter_user_ver_code.py  0026_alter_user_ver_code.py
